# rss-digest

./: MANIFEST.in  Pipfile  README.md  TODO.md  cli_ui.py  config.ini  config.py  config.toml  depends.txt  email_categories.html  email_handler.py  feedhandler.py  feedlist.py  html_generator.py  main.py  pyproject.toml  rss-digest  rss_digest.py  search.html  searchindex.js  setup.py  structure.txt  test.py
config/: config.ini  output.ini
docs/source/: conf.py  index.rst  tutorial.rst
rss_digest/: __init__.py  cli.py  config.py  dao.py  email_senders.py  entries.py  exceptions.py  feedhandler.py  feedlist.py  feeds.py  html_generator.py  metadata.py  model_utils.py  models.py  output.py  output_context.py  profile.py  rss_digest.py  tui.py  utils.py
rss_digest/data/: config.toml
rss_digest/resources/: config.toml
rss_digest/resources/helpers/: __init__.py
rss_digest/resources/templates/: _common_macros.jinja2  _plaintext_macros.jinja2  html  plaintext
templates/: _base.jinja2  _html_css.jinja2  _macros.jinja2  _plaintext_macros.jinja2  email.html  email.html.old  email_categories.html.old  html  markdown  plaintext
test/: _base.py  feedlist_test.py  fetch_test_feeds.py  helper_test.py  profile_test.py  test_utils.py
test/scripts/: test_opml_lists.sh
test/test_data/config/: config.ini  output.ini
test/test_data/opml/: own_feeds_no_category.opml  reddit.opml  tt-rss_2022-11-08_copy.opml  tt-rss_2022-11-08_notacopy.opml
test/unittests/: _base.py  feedlist_test.py  helper_test.py  profile_test.py
